--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Cybersecurity Student - Homelab Hobbyist</p>
+		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Cybersecurity Student at North Idaho College. I love technology and everything about it. I used this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, and Gitea.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -108,7 +109,7 @@
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">Work and Education</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -139,7 +140,32 @@
 			    Years Attended: 2017-2018</p>
 			    <p> North Idaho College<br>
 			    Major: Network Security Administration<br>
-			    Years Attended: 2019-Present</p>
+                Years Attended: 2019-Present<br>
+                Classes: </p>
+                <ul>
+                    <li>Computer IT Essentials</li>
+                    <li>Intro to Cyber Security</li>
+                    <li>Linux Essentials</li>
+                    <li>Linux System Admin</li>
+                    <li>Command Line and Script Fundamentals</li>
+                    <li>Information Sec Fundamentals</li>
+                    <li>Network Security Fundamentals</li>
+                    <li>Network Support I</li>
+                    <li>Network Support II</li>
+                    <li>Intro to Cybersecurity</li>
+                </ul>
+                <p>Free Time Education</p>
+                <ul>
+                    <li>Linux: Server and Desktop</li>
+                    <li>pfsense Router and Firewall</li>                    
+                    <li>XCP-ng Virtualization Server</li>
+                    <li>Docker</li>
+                    <li>Kubernetes</li>
+                    <li>Gitea Git Server</li>
+                    <li>Traefik Reverse Proxy</li>
+                    <li>Grafana Data Graphing</li>
+                </ul>
+
 		    </div>
                 </div>
             </div>
