--- a/index.html
+++ b/index.html
@@ -126,11 +126,19 @@
 			    <hr>
 			    <p>Papa Murphy's: 2012 - 2016</p>
 			    <p>Job Title: Supervisor</p>
-			    <p>Job Duties: Oversee employees and assist them with job tasks, Count tills at end of night, Close and open store.
+                <p>Job Duties: Delegate daily tasks, Assist staff as needed, Oversee transactions and deposits.</p>
+                <hr>
+                <p class="lead">Certifications</p>
+                <a href="https://www.youracclaim.com/badges/968838e4-3b93-4e77-bac2-c2e97a494c9a/public_url">
+                    <img class="img-fluid" src="assets/img/comptia_a.png" alt="Comptia A+">
+                </a>
+                <a href="https://www.youracclaim.com/badges/38aeea9f-97a3-49fb-819b-4ae96b8a3015/public_url">
+                    <img src="assets/img/comptia_linux.png" alt="Comptia Linux+">
+                </a>
 		    </div>
                     <div class="col-lg-4 mr-auto">
 			    <p class="lead">Education</p>
-			    <hr>
+                <hr>
 			    <p>College</p>
 			    <p> North Idaho College<br>
 			    Major: Computer Science<br>
