Added Final Classes

--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
                     <li>Network Support I</li>
                     <li>Network Support II</li>
                     <li>Intro to Cybersecurity</li>
+		    <li>Systems Administration I</li>
+                    <li>Network Forensics</li>
+                    <li>Ethical Hacking</li>
+                    <li>Cyber Competitions</li>
                 </ul>
                 <p>Free Time Education</p>
                 <ul>
