--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Cybersecurity Student - Homelab Hobbyist</p>
-		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Cybersecurity Student at North Idaho College. I love technology and everything about it. I used this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, and Gitea.</p>
+                <p class="masthead-subheading font-weight-light mb-0"> Network Security Analyst - Homelab Hobbyist</p>
+		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Network Security Administration Graduate from North Idaho College. I love technology and everything about it. I used this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, and Gitea.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -40,6 +40,7 @@
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Skills and Hobbies</h2>
+		<h4 class="text-center">Click to explore!</h4>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -128,7 +129,7 @@
 			    <p>Job Title: Supervisor</p>
                 <p>Job Duties: Delegate daily tasks, Assist staff as needed, Oversee transactions and deposits.</p>
                 <hr>
-                <p class="lead">Certifications</p>
+                <p class="lead">Certifications(Click to Verify)</p>
                 <a href="https://www.youracclaim.com/badges/968838e4-3b93-4e77-bac2-c2e97a494c9a/public_url">
                     <img class="img-fluid" src="assets/img/comptia_a.png" alt="Comptia A+">
                 </a>
@@ -147,8 +148,8 @@
 			    Major: Computer Science<br>
 			    Years Attended: 2017-2018</p>
 			    <p> North Idaho College<br>
-			    Major: Network Security Administration<br>
-                Years Attended: 2019-Present<br>
+			    Network Security Administration (AAS)<br>
+                Years Attended: 2019-2021<br>
                 Classes: </p>
                 <ul>
                     <li>Computer IT Essentials</li>
@@ -161,7 +162,7 @@
                     <li>Network Support I</li>
                     <li>Network Support II</li>
                     <li>Intro to Cybersecurity</li>
-		    <li>Systems Administration I</li>
+                    <li>Systems Administration I</li>
                     <li>Network Forensics</li>
                     <li>Ethical Hacking</li>
                     <li>Cyber Competitions</li>
@@ -169,7 +170,7 @@
                 <p>Free Time Education</p>
                 <ul>
                     <li>Linux: Server and Desktop</li>
-                    <li>pfsense Router and Firewall</li>                    
+                    <li>pfsense Router and Firewall</li>
                     <li>XCP-ng Virtualization Server</li>
                     <li>Docker</li>
                     <li>Kubernetes</li>
