--- a/index.html
+++ b/index.html
@@ -121,7 +121,12 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto"><p class="lead">Work Experience</p>
 			    <hr>
-			    <p>Costco: May 2016 - Present</p>
+			    <p>Nuvodia</p>
+			    <p>Job Title: Tier 2 Helpdesk Technician | May 2022 - Present</p>
+			    <p>Job Duties: Monitor phone queues, take calls when necessary, prioritize tickets based on priority system, work with engineers to come up with solutions for complex issues, dispatch tier 1 resources to apply fixes for multiple users, respond to alerts and high priority issues, respond and aid with escalation of complex issues.</p>
+			    <p>Job Title: Tier 1 Helpdesk Technician | September 2021 - May 2022</p>
+			    <p>Job Duties: Worked with users to provide solutions to issues, take calls for reactive tickets, provide assistance to higher resources, working with ticketing system to close the loop on communication with user, respond to alerts and solve them accordingly.</p>
+			    <p>Costco: May 2016 - September 2021</p>
 			    <p>Job Title: Stocker</p>
 			    <p>Job Duties: Stock Merchandise, Interface with Members, Manage time in an appropriate manner, Communicate with supervisors about questions/ideas to better my workflow.</p>
 			    <hr>
