--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0"> Network Security Analyst - Homelab Hobbyist</p>
-		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Network Security Administration Graduate from North Idaho College. I love technology and everything about it. I used this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, and Gitea.</p>
+                <p class="masthead-subheading font-weight-light mb-0"> Tier 2 Helpdesk Technician - Homelab Hobbyist</p>
+		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Tier 2 Helpdesk Technian at Nuvodia. I am also a Network Security Administration Graduate from North Idaho College. I love technology and everything about it. I use this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, Gitea and more.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -55,7 +55,7 @@
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/dell_server.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/manage-logo.png" alt="" />
                     </div>
                 </div>
                     <!-- Portfolio Item 1-->
@@ -64,7 +64,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/linux.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/windows.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -73,7 +73,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/docker.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/powershell.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -82,7 +82,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/kubernetes.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/linux.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -91,7 +91,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/gitea.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/kubernetes.png" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -100,7 +100,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/traefik.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/gitea.png" alt="" />
                         </div>
                     </div>
                 </div>
@@ -126,14 +126,8 @@
 			    <p>Job Duties: Monitor phone queues, take calls when necessary, prioritize tickets based on priority system, work with engineers to come up with solutions for complex issues, dispatch tier 1 resources to apply fixes for multiple users, respond to alerts and high priority issues, respond and aid with escalation of complex issues.</p>
 			    <p>Job Title: Tier 1 Helpdesk Technician | September 2021 - May 2022</p>
 			    <p>Job Duties: Worked with users to provide solutions to issues, take calls for reactive tickets, provide assistance to higher resources, working with ticketing system to close the loop on communication with user, respond to alerts and solve them accordingly.</p>
-			    <p>Costco: May 2016 - September 2021</p>
-			    <p>Job Title: Stocker</p>
-			    <p>Job Duties: Stock Merchandise, Interface with Members, Manage time in an appropriate manner, Communicate with supervisors about questions/ideas to better my workflow.</p>
-			    <hr>
-			    <p>Papa Murphy's: 2012 - 2016</p>
-			    <p>Job Title: Supervisor</p>
-                <p>Job Duties: Delegate daily tasks, Assist staff as needed, Oversee transactions and deposits.</p>
                 <hr>
+			    <p>Work Experience prior to September 2021 to be provided upon request.</p>
                 <p class="lead">Certifications(Click to Verify)</p>
                 <a href="https://www.youracclaim.com/badges/968838e4-3b93-4e77-bac2-c2e97a494c9a/public_url">
                     <img class="img-fluid" src="assets/img/comptia_a.png" alt="Comptia A+">
@@ -199,7 +193,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Linux</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Windows/Windows Server</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -207,9 +201,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/linux.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/windows.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">I am very familiar with Linux. I use it on a daily basis on my Virtual Machines that host my local services, as well as on my laptop for productivity.</p>
+                                    <p class="mb-5">I am experienced in troubleshooting user issues and diagnosing problems on the server that will affect multiple users/entire environments within the Windows system. I am also excited to learn new systems to enhance user experience and help bring their vision to life with technology.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -233,7 +227,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Docker</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Powershell</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -241,9 +235,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/docker.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/powershell.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Docker is a container runtime that I use for many of my services. It allows me to sandbox applications so that they don't interfere with one another.</p>
+                                    <p class="mb-5">I have taken a class on powershell automation and have been exploring scripting. I want to implement this knowledge to allow repetitive tasks to be run on a large scale.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -267,7 +261,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Kubernetes</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Linux</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -275,9 +269,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/kubernetes.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/linux.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Kubernetes is an orchestration tool for containers that allow the automation of deployment as well as the life cycle of said containers.</p>
+                                    <p class="mb-5">I am very familiar with Linux. It is used on a daily basis for my Virtual Machines that host my local services, as well as on my home PC for productivity/daily driving.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -301,7 +295,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Homelab</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Connectwise Manage</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -309,9 +303,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/dell_server.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/manage-logo.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">A Homelab is a way for people to practice using real server-grade equipment in a safe, non-production environment. I use mine to run applications and services that I use in my day-to-day life.</p>
+                                    <p class="mb-5">Being proficient with the ticketing system, I am able to navigate through Manage efficiently. I am also looking forward to learning more functionality in order to help our team utilize the software to the best of its abilities.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -335,7 +329,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Gitea</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Kubernetes</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -343,9 +337,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/gitea.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/kubernetes.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Gitea is a application that provides a Github-like interface with internal repositories. This allows me to save all of my projects in one place while using all the features that Git provides.</p>
+                                    <p class="mb-5">Kubernetes is an orchestration tool for containers that allows me to automate deployment, as well as the life cycle of said containers.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -369,7 +363,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Traefik</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Gitea</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -377,9 +371,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/traefik.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/gitea.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Traefik is a cloud native proxy. It allows me to forward web requests from one IP to multiple services using one base domain. I link my services and applications to this in order to access their Web UI's by name rather than by IP.</p>
+                                    <p class="mb-5">Gitea is an application that provides a Github-like interface with internal repositories. This allows me to save all of my projects in one place while using all the features that Git provides.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
