Updated job titles and removed Linux+ badge

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0"> Tier 2 Helpdesk Technician - Homelab Hobbyist</p>
-		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Tier 2 Helpdesk Technian at Nuvodia. I am also a Network Security Administration Graduate from North Idaho College. I love technology and everything about it. I use this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, Gitea and more.</p>
+                <p class="masthead-subheading font-weight-light mb-0">Helpdesk III Technician - Homelab Hobbyist</p>
+		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Helpdesk III Technian at Nuvodia. I am also a Network Security Administration Graduate from North Idaho College. I love technology and everything about it. I use this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, Gitea and more.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -100,7 +100,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/gitea.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/gitlab.png" alt="" />
                         </div>
                     </div>
                 </div>
@@ -122,18 +122,17 @@
                     <div class="col-lg-4 ml-auto"><p class="lead">Work Experience</p>
 			    <hr>
 			    <p>Nuvodia</p>
-			    <p>Job Title: Tier 2 Helpdesk Technician | May 2022 - Present</p>
+			    <p>Job Title: Helpdesk III Technician | May 2022 - Present</p>
 			    <p>Job Duties: Monitor phone queues, take calls when necessary, prioritize tickets based on priority system, work with engineers to come up with solutions for complex issues, dispatch tier 1 resources to apply fixes for multiple users, respond to alerts and high priority issues, respond and aid with escalation of complex issues.</p>
-			    <p>Job Title: Tier 1 Helpdesk Technician | September 2021 - May 2022</p>
+			    <p>Job Title: Helpdesk II Technician | September 2021 - May 2022</p>
 			    <p>Job Duties: Worked with users to provide solutions to issues, take calls for reactive tickets, provide assistance to higher resources, working with ticketing system to close the loop on communication with user, respond to alerts and solve them accordingly.</p>
                 <hr>
 			    <p>Work Experience prior to September 2021 to be provided upon request.</p>
                 <p class="lead">Certifications(Click to Verify)</p>
+                <p>Comptia A+ - Currently Active</p>
+                <p>Comptia Linux+ - Expired 11/13/2023</p>
                 <a href="https://www.youracclaim.com/badges/968838e4-3b93-4e77-bac2-c2e97a494c9a/public_url">
                     <img class="img-fluid" src="assets/img/comptia_a.png" alt="Comptia A+">
-                </a>
-                <a href="https://www.youracclaim.com/badges/38aeea9f-97a3-49fb-819b-4ae96b8a3015/public_url">
-                    <img src="assets/img/comptia_linux.png" alt="Comptia Linux+">
                 </a>
 		    </div>
                     <div class="col-lg-4 mr-auto">
@@ -371,9 +370,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/gitea.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/gitlab.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Gitea is an application that provides a Github-like interface with internal repositories. This allows me to save all of my projects in one place while using all the features that Git provides.</p>
+                                    <p class="mb-5">Gitlab is a git frontend that allows for collaborative development. Other benefits include: Continuous Development and Integration, Version Control, and much more.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
