--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
-                <div class="row">
+                <div class="row d-flex align-items-center">
                    <!-- Portfolio Item 4-->
                    <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
@@ -76,6 +76,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/powershell.png" alt="" />
                         </div>
                     </div>
+                    <div class="d-flex align-items-center">
                     <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
@@ -102,6 +103,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/gitlab.png" alt="" />
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -362,7 +364,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Gitea</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Gitlab</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
