--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Helpdesk III Technician - Homelab Hobbyist</p>
-		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Helpdesk III Technian at Nuvodia. I am also a Network Security Administration Graduate from North Idaho College. I love technology and everything about it. I use this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, Gitea and more.</p>
+		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Helpdesk III Technian at Nuvodia. I am also a Network Security Administration Graduate from North Idaho College. I love technology and everything about it. I use this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, Gitlab and more.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
