--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Helpdesk III Technician - Homelab Hobbyist</p>
-		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Helpdesk III Technian at Nuvodia. I am also a Network Security Administration Graduate from North Idaho College. I love technology and everything about it. I use this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, Gitlab and more.</p>
+                <p class="masthead-subheading font-weight-light mb-0">Deployments Engineer II - Homelab Hobbyist</p>
+		<p class="text-center mb-0">My name is Phil Whitcomb and I am a Deployments Engineer II at Nuvodia. I am also a Network Security Administration Graduate from North Idaho College. I love technology and everything about it. I use this love to learn how to host applications for myself and my family, such as, XCP-ng, Docker, Gitlab and more.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -124,18 +124,17 @@
                     <div class="col-lg-4 ml-auto"><p class="lead">Work Experience</p>
 			    <hr>
 			    <p>Nuvodia</p>
-			    <p>Job Title: Helpdesk III Technician | May 2022 - Present</p>
+			    <p>Job Title: Deployments Engineer II | April 2024 - Present</p>
+			    <p>Job Duties: Assist in the scoping of projects for deployment of new/existing tools, complete projects that involved setup of software, hardware, and virtual environments, create documentation of procedures for new software, assist in the clean up of exsisting documentation, provide guidance to collegues where helpful and needed.</p>
+			    <p>Job Title: Helpdesk III Technician | May 2022 - April 2024</p>
 			    <p>Job Duties: Monitor phone queues, take calls when necessary, prioritize tickets based on priority system, work with engineers to come up with solutions for complex issues, dispatch tier 1 resources to apply fixes for multiple users, respond to alerts and high priority issues, respond and aid with escalation of complex issues.</p>
 			    <p>Job Title: Helpdesk II Technician | September 2021 - May 2022</p>
 			    <p>Job Duties: Worked with users to provide solutions to issues, take calls for reactive tickets, provide assistance to higher resources, working with ticketing system to close the loop on communication with user, respond to alerts and solve them accordingly.</p>
                 <hr>
 			    <p>Work Experience prior to September 2021 to be provided upon request.</p>
-                <p class="lead">Certifications(Click to Verify)</p>
-                <p>Comptia A+ - Currently Active</p>
+                <p class="lead">Certifications</p>
+                <p>Comptia A+ - Expired 11/13/2023</p>
                 <p>Comptia Linux+ - Expired 11/13/2023</p>
-                <a href="https://www.youracclaim.com/badges/968838e4-3b93-4e77-bac2-c2e97a494c9a/public_url">
-                    <img class="img-fluid" src="assets/img/comptia_a.png" alt="Comptia A+">
-                </a>
 		    </div>
                     <div class="col-lg-4 mr-auto">
 			    <p class="lead">Education</p>
